MODON MRE BPDEV/force-app/main/default/objects/Credit_Allocation__c/Credit_Allocation__c.object-meta.xml
<CustomObject>
    <label>Credit Allocation</label>
    <nameField>
        <displayFormat>CNA-{0000}</displayFormat>
        <label>Credit Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>