MODON MRE BPDEV/force-app/main/default/objects/Credit_Allocation__c/fields/ApprovedCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCreditAmount__c</fullName>
    <label>Approved Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>