MODON MRE BPDEV/force-app/main/default/objects/Credit_Allocation__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>CreditNote__c</referenceTo>
    <relationshipLabel>Credit Allocation</relationshipLabel>
    <relationshipName>Credit_Allocation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>