MODON MRE BPDEV/force-app/main/default/objects/Credit_Allocation__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Allocation</relationshipLabel>
    <relationshipName>Credit_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>